--- a/publications/2018.bib
+++ b/publications/2018.bib
@@ -516,3 +516,18 @@ url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/hbm.24057}
   	application={neurofeedback},
   	new = {true}
 }
+
+@article{lorenz2018dissociating,
+  title={Dissociating frontoparietal brain networks with neuroadaptive Bayesian optimization},
+  author={Lorenz, Romy and Violante, Ines R and Monti, Ricardo Pio and Montana, Giovanni and Hampshire, Adam and Leech, Robert},
+  journal={Nature communications},
+  volume={9},
+  number={1},
+  pages={1227},
+  year={2018},
+  publisher={Nature Publishing Group},
+  imaging={fmri},
+  application={methods},
+  url={https://www.nature.com/articles/s41467-018-03657-3},
+  new = {true}
+}
